no need for package dep

--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <link href="c3.css" rel="stylesheet" type="text/css">
-
-<!-- Load d3.js and c3.js -->
-<script src="node_modules/d3/d3.min.js" charset="utf-8"></script>
+<script src="d3.min.js"></script>
 <script src="c3.min.js"></script>
 <style>
 	#watch {
